# Working_repo

./: .gitignore  README.md
CatBoostTutorYandex/: catboost-vs-lightgbm-vs-xgboost-prediction.ipynb
CreditScoreCatBoost/: research.py
InFileGenerator/: avg_in_file_generator.py  empty.json  json_maker.py  pre_set.json  xlsx_read.py
Leetcode/: ! 859 BuddyString.ipynb  ! 921  Minimum Add to Make Parentheses Valid.ipynb  1221. Split a String in Balanced Strings.ipynb  14. Longest Common Prefix.ipynb  2506. Count Pairs Of Similar Strings.ipynb  2517.ipynb  2540. Minimum Common Value.ipynb  26. Remove Duplicates from Sorted Array.ipynb  27. Remove Element.ipynb  463. Island Perimeter.ipynb  58. Length of Last Word.ipynb  67. Add Binary.ipynb  69 SQRT(X).ipynb  859 BuddyString.ipynb  913 X of a Kind in a Deck of Cards.ipynb  921  Minimum Add to Make Parentheses Valid.ipynb  DFS.ipynb  Longest Palindromic Substring.ipynb  Romans to integer.ipynb  isPalindrome.ipynb  isValid.ipynb  lower.ipynb  sum3.ipynb  sum_2.ipynb
ListComprehantion/: basics_of_list_and_dict_comprehension.py
PasswordManager/: data.json  data.txt  tryexceptions.py
ReadJson/: AveragingConditions.js  Batches.js  Batches2.js  ReadJson.py  (+1 more)
projects/fast_api/cft_app_docker/: myDocker  pyproject.toml
projects/fast_api/cft_app_docker+poetry/cft_app/: myDocker  pyproject.toml
projects/fast_api/cft_app_docker+poetry/cft_app/cft_app/: auth.py  crud.py  database.py  main.py  metadata.py  models.py  prepare_bd.py  schemas.py
projects/fast_api/cft_app_docker/app/: auth.py  crud.py  main.py  models.py
(+300 files in other folders)
