[tool.poetry]
name = "cft-app"
version = "0.1.0"
description = ""
authors = ["DataStas <sizovstanislav10@gmail.com>"]
readme = "README.md"
packages = [{include = "cft_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
sqlalchemy = "^2.0.16"
datetime = "^5.1"
passlib = "^1.7.4"
pycryptodome = "^3.18.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
